--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/projetsi
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
+server.port=9093
+
 
 #spring.datasource.initialization-mode=always
 #spring.datasource.initialize=true
