--- a/apis/src/main/resources/application.properties
+++ b/apis/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # This will create table automatically in your database
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 # Changing server port
 server.port=9092
 # JWT secret key
